--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "module": "flask",
             "env": {
-                "FLASK_APP": "main-flask-core/core_app.py",
+                "FLASK_APP": "mainFlaskCore/core_app.py",
                 "FLASK_ENV": "development"
             },
             "args": [
